--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h2{
 
 	.repo h5{
 		font: 16px/16px Helvetica Neue;
+		max-height:16px;
 		float: left;
 		width: 85%;
 	}
@@ -148,7 +149,3 @@ select {
 	#width_tmp_select{
 		display: none;
 	}
-
-@media max-width: {
-	
-}
