--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ body{
 h2{
 	font:48px/48px Helvetica Neue;
 	color:white;
-	width:258px;
+	width:250px;
 	margin:40px auto 0px;
 	clear: both;
+	font-weight:300;
 }
 
 	h2 img{
@@ -50,8 +51,9 @@ h2{
 		color:rgba(255,255,255,0.975);
 	}
 
-	.selection >*{
+	.selection > *{
 		float: left;
+		font-weight:200;
 	}
 
 	.selection#languages{
@@ -75,6 +77,7 @@ h2{
 	overflow: hidden;
 	font:20px/20px Helvetica Neue;
 	background: rgba(255,255,255,0.825);
+	color:#333;
 }
 
 	.repo a {
@@ -107,12 +110,14 @@ h2{
 		width:95%;
 		margin-top:7px;
 		overflow: hidden;
+		font-weight:400;
 	}
 
 	.repo span{
 		font-size: 11px;
 		font-weight: bold;
 		display: block;
+		color:#555;
 	}
 
 a{
