--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,18 @@ h2{
 	clear: both;
 	width: 100%;
 	margin:10px auto;
+	height: calc(100% - 130px - 50px);
+	overflow: scroll;
+}
+
+
+#repos::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+#repos::-webkit-scrollbar-thumb {
+    background: #FF0000;
 }
 
 .repo{
@@ -201,7 +213,6 @@ input::-webkit-calendar-picker-indicator {
 @media (min-width: 1024px) {
 
 	#repos{
-		max-height:630px;
 		margin-top:30px;
 	}
 
